<resources>
    <string name="app_name">AvansCinema</string>
    <string name="lengte">Lengte: </string>
    <string name="minuten">minuten</string>
    <string name="Datum_van_verschijning">Datum van verschijning</string>

    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>
    <string name="druk_op_de_afbeelding_hierboven_om_de_trailer_te_openen">Druk op de afbeelding hierboven om de trailer te openen</string>
    <string name="acteurs_en_actrices">Acteurs en Actrices</string>
    <string name="productiebedrijven">Productiebedrijven</string>
    <string name="populaire_films">Populaire films</string>
    <string name="favorieten">Favorieten</string>
    <string name="bekijk_later">Bekijk later</string>
    <string name="instellingen">Instellingen</string>
    <string name="jouw_lijsten">Jouw lijsten</string>
    <string name="Datum">Datum</string>
    <string name="thema">Thema</string>
    <string name="Beoordeling">Beoordeling</string>
    <string name="Verwacht">verwacht</string>
    <string name="lengte_en_datum_vanVerschijning">lengte: %1$d minuten   Datum van verschijning: %2$s</string>
    <string name="genres">Genres: %1$s</string>
    <string name="oplopend">Oplopend</string>
    <string name="aflopend">Aflopend</string>
    <string name="genre">Genre</string>


    //Begin settings page
    <string name="taal_aanpassen" translatable="false">Taal Aanpassen / Switch Language</string>
    <string name="nederlands" translatable="false">Nederlands</string>
    <string name="engels" translatable="false">English</string>
    <string name="licht">Licht</string>
    <string name="donker">Donker</string>
    <string name="thema_aanpassen">Thema aanpassen</string>
    <string name="opslaan" translatable="false">Opslaan / Save</string>
    <string name="beoordeel_de_film">Beoordeel de film!</string>
    <string name="verstuur">Verstuur!</string>
    <string name="ratingtoast">Rating van 0 niet mogelijk</string>
    <string name="beoorderling_verstuurd">Beoordeling verstuurd!</string>
    //End setings page

    <string-array name="spinner_list_sorteren">
        <item>Sorteer</item>
        <item>@string/Datum</item>
        <item>@string/Beoordeling</item>
    </string-array>
    <string-array name="spinner_list_filter">
        <item>Filter</item>
        <item>@string/Datum</item>
        <item>@string/Beoordeling</item>
        <item>@string/genre</item>
    </string-array>
    <string-array name="asc_desc">
        <item>@string/oplopend</item>
        <item>@string/aflopend</item>
    </string-array>
    <string name="film_lijst">Toevoegen aan lijst</string>
    <string name="film_lijst_knop">Toevoegen</string>
    <string name="waarde">value</string>
    <string name="films">Films</string>
    <string name="Voegfilmtoe">Add a movie list</string>
    <string name="naam">Name</string>
    <string name="opslaan2">save</string>
    <string name="beschrijving">Description</string>
    <string name="fill_before_submit">Please fill in all fields before submitting</string>
    <string name="sorteer">Sorteer</string>

</resources>