<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/Movie_list"
        android:orderInCategory="1"
        android:title="@string/populaire_films"
        android:icon="@drawable/movies"
        app:showAsAction="never" />
    <item
        android:id="@+id/Favourites"
        android:orderInCategory="2"
        android:title="@string/favorieten"
        app:showAsAction="never"
        android:icon="@drawable/favourite"
        />
    <item
        android:id="@+id/To_be_seen"
        android:orderInCategory="3"
        android:title="@string/bekijk_later"
        app:showAsAction="never"
        android:icon="@drawable/to_be_seen"
        />
    <item
        android:id="@+id/settings"
        android:orderInCategory="5"
        android:title="@string/instellingen"
        app:showAsAction="never"
        android:icon="@drawable/settings"
        />

    <item
        android:id="@+id/usermovielist"
        android:orderInCategory="5"
        android:title="@string/jouw_lijsten"
        app:showAsAction="never"
        android:icon="@drawable/ic_list"
        />
</menu>