<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.UserListCreateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/form_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/outer_background"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/form_list_toolbar_back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:background="@drawable/back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/app_name" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/title_color"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/Voegfilmtoe"
            android:background="@drawable/description_box_list_item"
            android:gravity="center"/>

        <EditText
            android:id="@+id/form_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/naam" />

        <EditText
            android:id="@+id/form_list_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/beschrijving" />

        <Button
            android:id="@+id/form_list_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/opslaan2" />
    </LinearLayout>
</LinearLayout>